revise run configs